<resources>
    <string name="cancel_label">Cancel</string>
    <string name="confirm_label">Confirm</string>
    <string name="selected_folder_label">Selected folder:</string>
    <string name="create_folder_label">Create folder</string>
    <string name="create_folder_msg">Create new folder with name "%1$s"?</string>
    <string name="create_folder_success">Created new folder</string>
    <string name="create_folder_error_no_write_access">Cannot write to this folder</string>
    <string name="create_folder_error_already_exists">Folder already exists</string>
    <string name="create_folder_error">Could not create folder</string>
    <string name="up_label">Up</string>
    <string name="menu_equalizer">Equalizer</string>
    <string name="remove_album_cover">Remove Album Cover</string>
    <string name="remove_album_cover_title">Remove Album Cover</string>
    <string name="remove_album_cover_complete">Do you want to remove cover?</string>
	<string name="disclaimer">All search results come from Jamendo.com API. Jamendo is the biggest website for free Copyleft music that can be downloaded legally.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="not_selected_song">Not selected song</string>
    <string name="file_with_the_same_name_already_exists">File with the same name already exists</string>
    <string name="app_name">Vanilla Music</string>
	<string name="no_songs">No songs found on your device.</string>
	<string name="empty_queue">No songs selected. Pick some from the library or enter random mode by tapping this message.</string>
	<string name="settings">Settings</string>
	<string name="library">Library</string>
	<string name="no_shuffle">No shuffle</string>
	<string name="shuffle_songs">Shuffle songs</string>
	<string name="shuffle_albums">Shuffle albums</string>
	<string name="no_repeat">No repeat</string>
	<string name="repeat">Repeat</string>
	<string name="repeat_current_song">Repeat current song</string>
	<string name="stop_current_song">Stop after current song</string>
	<string name="random">Random</string>
	<string name="random_enabling">Random enabled</string>
	<string name="song_load_failed">Failed to load song %s. It may be corrupt or missing.</string>
	<string name="queue_cleared">Queue cleared.</string>
	<string name="cover_art">ам</string>
	<string name="close_notification">Close notification</string>
	<string name="_genre">genre</string>
	<string name="_track">track</string>
	<string name="_composer">composer</string>
	<string name="_format">format</string>
	<string name="_title">title</string>
	<string name="_artist">artist</string>
	<string name="_album">album</string>
	<string name="_year">year</string>
	<string name="choose_playlist_name">Choose Playlist Name</string>
	<string name="create">Create</string>
	<string name="overwrite">Overwrite</string>
	<string name="cancel">Cancel</string>
	<string name="delete_playlist">Delete playlist %s?</string>
	<string name="enqueue">Enqueue</string>
	<string name="play">Play</string>
	<string name="edit">Edit</string>
	<string name="rename">Rename</string>
	<string name="add_to_playlist">Add to Playlist…</string>
	<string name="new_playlist">New Playlist…</string>
	<string name="expand">Expand</string>
	<string name="delete">Delete</string>
	<string name="playback_view">Now Playing</string>
	<string name="sort_by">Sort By</string>
	<string name="search">Search</string>
	<string name="done">Done</string>
	<string name="remove">Remove</string>
	<string name="clear_search">Clear search</string>
	<string name="play_or_enqueue">Enqueue if playing; Play if paused</string>
	<plurals name="playing">
		<item quantity="one">1 song playing.</item>
		<item quantity="other">%d songs playing.</item>
	</plurals>
	<plurals name="enqueued">
		<item quantity="one">1 song enqueued.</item>
		<item quantity="other">%d songs enqueued.</item>
	</plurals>
	<plurals name="added_to_playlist">
		<item quantity="one">1 song added to playlist %2$s.</item>
		<item quantity="other">%1$d songs added to playlist %2$s.</item>
	</plurals>
	<plurals name="deleted">
		<item quantity="one">1 song deleted.</item>
		<item quantity="other">%d songs deleted.</item>
	</plurals>
	<string name="delete_file_failed">Failed to delete %s.</string>
	<string name="artists">Artists</string>
	<string name="albums">Albums</string>
	<string-array name="songs">
	    <item>songs</item>
	    <item>song</item>
	    <item>songs</item>
	</string-array>
	<string name="playlists">Playlists</string>
	<string name="genres">Genres</string>
	<string name="files">Files</string>
	<string name="none">None</string>
	<string name="unknown">Unknown</string>
	<string name="play_all">Play All</string>
	<string name="enqueue_all">Enqueue All</string>
	<string name="all_songs">All Songs</string>
	<string name="more_from_artist">More from artist</string>
	<string name="more_from_album">More from album</string>
	<string name="name">Name</string>
	<string name="number_of_tracks">Number of tracks</string>
	<string name="year">Year</string>
	<string name="date_added">Date added</string>
	<string name="artist_album">Artist, album</string>
	<string name="artist_album_track">Artist, album, track number</string>
	<string name="artist_album_title">Artist, album, title</string>
	<string name="artist_year">Artist, year</string>
	<string name="ascending">Ascending</string>
	<string name="descending">Descending</string>
	<string name="notification_title_paused">%s (Paused)</string>
	<plurals name="seconds">
		<item quantity="one">1 second</item>
		<item quantity="other">%d seconds</item>
	</plurals>
	<plurals name="minutes">
		<item quantity="one">1 minute</item>
		<item quantity="other">%d minutes</item>
	</plurals>
	<plurals name="hours">
		<item quantity="one">1 hour</item>
		<item quantity="other">%d hours</item>
	</plurals>
	<string name="audio">Audio</string>
	<string name="volume_title">Volume</string>
	<string name="media_button_title">Headset/Bluetooth Controls</string>
	<string name="media_button_summary">This is also required for ICS lockscreen controls.</string>
	<string name="media_button_beep_title">Headset Control Beep</string>
	<string name="media_button_beep_summary">Beep after skipping a track with a headset control double click.</string>
	<string name="headset_only_title">External Output Only</string>
	<string name="headset_only_summary">Prevents music from being played through the internal speakers.</string>
	<string name="headset_pause_title">Pause When Unplugged</string>
	<string name="headset_pause_summary">Pause when the headphones are unplugged.</string>
	<string name="headset_play_title">Play When Plugged</string>
	<string name="headset_play_summary">Play when the headphones are plugged in. (Only works when the service is running.)</string>
	<string name="notifications">Notifications</string>
	<string name="notification_mode_title">Notification Mode</string>
	<string name="notification_action_title">Notification Action</string>
	<string name="notification_invert_color_title">Invert Notification Color</string>
	<string name="notification_invert_color_summary">Use white text instead of black text</string>
	<string name="playback_screen">Playback Screen</string>
	<string name="playback_on_startup_title">Open on Startup</string>
	<string name="playback_on_startup_summary">Open playback view on startup</string>
	<string name="display_mode_title">Display Mode</string>
	<string name="swipe_up_action_title">Swipe Up Action</string>
	<string name="swipe_down_action_title">Swipe Down Action</string>
	<string name="cover_press_action_title">Cover Tap Action</string>
	<string name="cover_longpress_action_title">Cover Long Press Action</string>
	<string name="library_screen">Library Screen</string>
	<string name="controls_in_selector_title">Controls in Library</string>
	<string name="controls_in_selector_summary">Show the currently playing song and media controls in the library view</string>
	<string name="default_action_title">Default Action</string>
	<string name="default_playlist_action_title">Default Playlist Action</string>
	<string name="accelerometer_shake">Accelerometer Shake</string>
	<string name="enable_shake_title">Enable Accelerometer Shake</string>
	<string name="enable_shake_summary">Only active when music is playing. Does not work when screen is off on some devices.</string>
	<string name="shake_action_title">Shake Action</string>
	<string name="shake_threshold_title">Shake Force Threshold</string>
	<string name="misc_features">Miscellaneous Features</string>
	<string name="disable_lockscreen_title">Disable Lockscreen</string>
	<string name="disable_lockscreen_summary">Prevent the lockscreen from activating when in the library or playback screen</string>
	<string name="use_idle_timeout_title">Enable Idle Timeout</string>
	<string name="use_idle_timeout_summary">When active, playback will be stopped after the given period of inactivity</string>
	<string name="idle_timeout_title">Idle Timeout</string>
	<string name="disable_cover_art_title">Disable Cover Art</string>
	<string name="disable_cover_art_summary">Avoid loading cover art anywhere in the application</string>
	<string name="double_tap_title">Double Tap Widget</string>
	<string name="double_tap_summary">Double-tapping the 1x1 widget will open the player. Incurs a 400ms delay before the widget responds to actions.</string>
	<string name="scrobble_title">Use ScrobbleDroid API</string>
	<string name="scrobble_summary">Scrobble to Last.FM through ScrobbleDroid or Simple Last.FM Scrobbler</string>
	<string name="stock_broadcast_title">Emulate Stock Broadcasts</string>
	<string name="stock_broadcast_summary">Send broadcasts emulating those sent by the stock music player to work with 3rd party lockscreen controls, widgets, etc.</string>
	<string name="media_scan">Refresh Library</string>
	<string name="tap_to_scan">Tap to scan external storage for music</string>
	<string name="scan_in_progress">Scan in progress…</string>
	<string name="finished_scanning">Finished scanning. Tap to scan again.</string>
	<string name="about">About</string>
	<string name="tabs">Tab Order</string>
	<string name="customize_tab_order">Adjust the order and visibility of library tabs</string>
	<string name="restore_default">Restore default</string>
	<string name="lyric_checkbox">Load Lyrics automatically</string>
	<string name="lyric_summary">Show lyrics</string>
	<string name="last_used_action">Last used action</string>
	<string name="never_show">Never show</string>
	<string name="show_when_playing">Show when playing (default)</string>
	<string name="always_show">Always show</string>
	<string name="open_main_activity">Open library (default)</string>
	<string name="open_mini_popup">Open mini popup</string>
	<string name="skip_to_next_song">Skip to next song</string>
	<string name="info_on_cover">Info on cover art</string>
	<string name="info_below_cover">Info below cover art</string>
	<string name="fixed_info">Info fixed at top</string>
	<string name="do_nothing">Do nothing</string>
	<string name="open_library">Open library</string>
	<string name="play_pause">Play/Pause</string>
	<string name="next_song">Next song</string>
	<string name="previous_song">Previous song</string>
	<string name="next_album">Next album</string>
	<string name="previous_album">Previous album</string>
	<string name="cycle_repeat_mode">Cycle repeat mode</string>
	<string name="cycle_shuffle_mode">Cycle shuffle mode</string>
	<string name="enqueue_current_album">Enqueue album</string>
	<string name="enqueue_current_artist">Enqueue artist</string>
	<string name="enqueue_current_genre">Enqueue genre</string>
	<string name="clear_queue">Clear queue</string>
	<string name="toggle_controls">Toggle controls</string>
	<string name="show_position_tab">Switching show tab</string>
	<string name="customize_show_position_tab">Switch showing tabs at the top or at the bottom</string>
</resources>