<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageButton
        android:id="@+id/shuffle"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/selectable_item_bg"
        android:contentDescription="@string/cycle_shuffle_mode"
        android:scaleType="fitCenter"
        android:src="@drawable/shuffle_inactive" />

    <ImageButton
        android:id="@+id/previous"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/selectable_item_bg"
        android:contentDescription="@string/previous_song"
        android:scaleType="fitCenter"
        android:src="@drawable/previous" />

    <ImageButton
        android:id="@+id/play_pause"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/selectable_item_bg"
        android:contentDescription="@string/play_pause"
        android:scaleType="fitCenter"
        android:src="@drawable/play" />

    <ImageButton
        android:id="@+id/next"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/selectable_item_bg"
        android:contentDescription="@string/next_song"
        android:scaleType="fitCenter"
        android:src="@drawable/next" />

    <ImageButton
        android:id="@+id/end_action"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/selectable_item_bg"
        android:contentDescription="@string/cycle_repeat_mode"
        android:scaleType="fitCenter"
        android:src="@drawable/repeat_inactive" />

</merge>